<resources>
    <string name="app_name">ReFresh</string>
    <string name="bottom_nav_fridge">Fridge</string>
    <string name="bottom_nav_recipe">Recipes</string>
    <string name="bottom_nav_shop">Shopping List</string>
    <string name="settings">Notification Settings</string>
    <string name="settings_reminder_time_label">Remind me at </string>
    <string name="settings_reminder_frequency">Reminder Frequency</string>
    <string name="settings_add_reminder">Add Reminder</string>
    <string name="settings_reminder_hint">e.g. 10</string>
    <string name="settings_reminder_minute_label">Minutes before</string>
    <string name="settings_reminder_hour_label">Hours</string>
    <string name="settings_reminder_day_label">Days</string>
    <string name="settings_reminder_week_label">Weeks</string>
    <string name="null_list_screen">Start by adding a new item!</string>
    <string name="null_recipe_screen">Nothing to cook with :(</string>
    <string name="form_item_name_label">Item Name</string>
    <string name="form_quantity_label">Quantity</string>
    <string name="form_date_label">Expiry Date</string>
    <string name="form_notes_label">Notes</string>
    <string name="create_button">Create</string>
    <string name="cancel_button">Cancel</string>
    <string name="edit_button">Edit</string>
    <string name="delete_button">Remove</string>
    <string name="item_quantity_label">Quantity: </string>
    <string name="item_reminder_label">Remind me on: </string>
    <string name="save_button">Save</string>
    <string name="recipe_item_missing_ingredients_label">Missing ingredients:</string>
    <string name="na_placeholder">N/A</string>
    <string name="open_in_browser_label">Open in Browser</string>
    <string name="shop_item_msrp_label">MSRP:</string>
    <string name="generate_recipes_button">Generate Recipes</string>
</resources>
